Bug 15477 - The heimdal KDC doesn't detect s4u2self correctly when fast is in use
Summary: The heimdal KDC doesn't detect s4u2self correctly when fast is in use
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: AD: LDB/DSDB/SAMDB (show other bugs)
Version: 4.18.6
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-09-19 21:26 UTC by Stefan Metzmacher
Modified: 2023-10-16 14:20 UTC (History)
3 users (show)

See Also:


Attachments
Patch for v4-19-test (2.50 KB, patch)
2023-09-19 21:36 UTC, Stefan Metzmacher
metze: review? (abartlet)
jsutton: review+
Details
Patch for v4-18-test (2.57 KB, text/plain)
2023-09-19 21:37 UTC, Stefan Metzmacher
metze: review? (abartlet)
jsutton: review+
Details
Patch for v4-17-test (2.50 KB, text/plain)
2023-09-19 21:38 UTC, Stefan Metzmacher
metze: review? (abartlet)
jsutton: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan Metzmacher 2023-09-19 21:26:28 UTC
It doesn't add the correct Asserted Identity SID into the pac
Comment 1 Stefan Metzmacher 2023-09-19 21:36:56 UTC
Created attachment 18105 [details]
Patch for v4-19-test
Comment 2 Stefan Metzmacher 2023-09-19 21:37:38 UTC
Created attachment 18106 [details]
Patch for v4-18-test
Comment 3 Stefan Metzmacher 2023-09-19 21:38:22 UTC
Created attachment 18107 [details]
Patch for v4-17-test
Comment 4 Jule Anger 2023-09-22 19:31:35 UTC
Pushed to autobuild-v4-[19,18}-test.
4.17 is in security fixes only mode
Comment 5 Samba QA Contact 2023-09-22 20:35:24 UTC
This bug was referenced in samba v4-19-test:

9ba1c94e3e133a56e04f7388554b99c57753314a
Comment 6 Samba QA Contact 2023-09-22 21:08:19 UTC
This bug was referenced in samba v4-18-test:

7b57cfb1a9328072e090b5e05c9b0cb09cd2d883
Comment 7 Jule Anger 2023-09-25 08:07:13 UTC
Closing out bug report.

Thanks!
Comment 8 Samba QA Contact 2023-09-27 08:16:35 UTC
This bug was referenced in samba v4-18-stable (Release samba-4.18.7):

7b57cfb1a9328072e090b5e05c9b0cb09cd2d883
Comment 9 Samba QA Contact 2023-10-01 23:47:12 UTC
This bug was referenced in samba master:

7b6c17359ba4f264e4f84e5495c79c62a3e9bb89
Comment 10 Samba QA Contact 2023-10-16 14:20:00 UTC
This bug was referenced in samba v4-19-stable (Release samba-4.19.2):

9ba1c94e3e133a56e04f7388554b99c57753314a